--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,12 +12,14 @@ dependencies = [
     "daphne>=4.2.1",
     "dj-database-url>=3.1.0",
     "django>=6.0.2",
+    "django-allauth[socialaccount]>=65.5.0",
     "django-cors-headers>=4.9.0",
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
     "psycopg[binary]>=3.3.2",
     "pytest>=9.0.2",
     "pytest-django>=4.11.1",
+    "python-dotenv>=1.0.1",
     "redis>=7.1.1",
     "requests>=2.32.5",
     "websockets>=16.0",
