--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "django-cors-headers>=4.9.0",
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
+    "gunicorn>=25.1.0",
     "psycopg[binary]>=3.3.2",
     "pytest>=9.0.2",
     "pytest-django>=4.11.1",
@@ -23,4 +24,5 @@ dependencies = [
     "redis>=7.1.1",
     "requests>=2.32.5",
     "websockets>=16.0",
+    "whitenoise>=6.11.0",
 ]
