chore(deploy): finalize render.yaml blueprint based on official docs

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: gpu-frontend
     runtime: static
     buildCommand: "cd frontend && npm install && npm run build"
-    staticPublishDir: "frontend/dist"
+    staticPublishPath: "frontend/dist"
     envVars:
       - key: VITE_API_URL
         fromService:
