--- a/render.yaml
+++ b/render.yaml
@@ -1,45 +1,48 @@
+# Render Blueprint — deploy backend in one click
+# https://render.com/docs/blueprint-spec
 services:
-  # 1. The Frontend (React/Vite)
   - type: web
-    name: gpu-frontend
-    runtime: static
-    buildCommand: "cd frontend && npm install && npm run build"
-    staticPublishPath: "frontend/dist"
-    envVars:
-      - key: VITE_API_URL
-        fromService:
-          type: web
-          name: gpu-backend
-          property: host
-      - key: VITE_WS_URL
-        # This will need to be updated manually after the backend is created to use wss://
-        value: "wss://gpu-backend.onrender.com/ws/dashboard/"
-
-  # 2. The Backend (Django/Daphne)
-  - type: web
-    name: gpu-backend
+    name: gpu-connect-api
     runtime: python
-    buildCommand: "./backend/build.sh"
-    startCommand: "cd backend && daphne -b 0.0.0.0 -p $PORT config.asgi:application"
+    region: oregon
+    plan: free
+    rootDir: backend
+    buildCommand: ./build.sh
+    startCommand: daphne -b 0.0.0.0 -p $PORT config.asgi:application
     envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: gpu-db
-          property: connectionString
-      - key: DJANGO_DEBUG
-        value: "False"
       - key: DJANGO_SECRET_KEY
         generateValue: true
-      - key: PYTHON_VERSION
-        value: "3.12.0"
+      - key: DJANGO_DEBUG
+        value: "False"
       - key: DJANGO_ALLOWED_HOSTS
-        value: "gpu-backend.onrender.com"
+        value: ".onrender.com"
+      - key: DATABASE_URL
+        sync: false          # You'll paste your Neon connection string here
+      - key: FRONTEND_URL
+        sync: false          # e.g. https://your-app.vercel.app
       - key: CORS_ALLOWED_ORIGINS
-        value: "https://gpu-frontend.onrender.com"
+        sync: false          # same as FRONTEND_URL
       - key: CSRF_TRUSTED_ORIGINS
-        value: "https://gpu-frontend.onrender.com"
-
-# 3. The Database
-databases:
-  - name: gpu-db
-    plan: free
+        sync: false          # same as FRONTEND_URL (with https://)
+      - key: PYTHON_VERSION
+        value: "3.12.3"
+      # Optional — leave blank to skip Redis/Celery
+      - key: REDIS_URL
+        sync: false
+      - key: CELERY_BROKER_URL
+        sync: false
+      - key: CELERY_RESULT_BACKEND
+        sync: false
+      # OAuth (optional — set if you want social login)
+      - key: GOOGLE_CLIENT_ID
+        sync: false
+      - key: GOOGLE_CLIENT_SECRET
+        sync: false
+      - key: GITHUB_CLIENT_ID
+        sync: false
+      - key: GITHUB_CLIENT_SECRET
+        sync: false
+      - key: MICROSOFT_CLIENT_ID
+        sync: false
+      - key: MICROSOFT_CLIENT_SECRET
+        sync: false
