feat: include agent download files in Vercel deployment
- Add Windows (.exe), Linux (.zip), and macOS (.zip) files to git tracking
- Update .gitignore to allow frontend/public/downloads/ files
- Files are now included in Vercel builds and available for download

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@ develop-eggs/
 dist/
 downloads/
 eggs/
+
+# But allow frontend downloads
+!frontend/public/downloads/
+!frontend/public/downloads/*.exe
+!frontend/public/downloads/*.zip
 .eggs/
 lib/
 lib64/
