--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "backend"
-version = "0.1.0"
-description = "Add your description here"
+version = "1.0.0"
+description = "GPU Connect - Decentralized AI Compute Marketplace. Connect providers and consumers to share GPU resources via secure token-based authentication and real-time WebSocket communication."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
