--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "gunicorn>=25.1.0",
     "psycopg[binary]>=3.3.2",
     "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
     "pytest-django>=4.11.1",
     "python-dotenv>=1.0.1",
     "redis>=7.1.1",
