--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -94,14 +94,14 @@ jobs:
           cd frontend
           npm ci
           set +e
-          npm audit --json > ../npm-audit-results.json
+          npm audit --audit-level=high --json > ../npm-audit-results.json
           AUDIT_EXIT=$?
           set -e
           if [ $AUDIT_EXIT -ne 0 ]; then
-            echo "npm audit found vulnerabilities - failing workflow"
+            echo "npm audit found high/critical vulnerabilities - failing workflow"
             exit 1
           fi
-          echo "npm audit scan complete - no vulnerabilities found"
+          echo "npm audit scan complete - no high/critical vulnerabilities found"
 
       - name: Upload npm audit report
         if: always()
